# telegram-forward

./: .gitignore  main.py  pyproject.toml
forward_telegram_bot/: app.py  common.py  database.py  models.py
forward_telegram_bot/models/: forward.py
